# todui

./: .gitignore  Cargo.toml  README.md  settings.json
.github/workflows/: release.yml
data/: INSTRUCTIONS.md
schemas/: chat-bar-todo.schema.json
src/: main.rs
themes/: README.md  base16-black-metal-dark-funeral.tmTheme  base16-black-metal-venom.tmTheme
