[package]
name = "todui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
notify = "7"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = "5"
tui-textarea = "0.7"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tempfile = "3"
